More sonar issues.